<resources>
    <string-array name="income">
        <item>@string/siblings_1</item>
        <item>@string/siblings_2</item>
        <item>@string/siblings_3</item>
    </string-array>
    <string-array name="modeofstudy">
        <item>@string/mode1</item>
        <item>@string/mode2</item>
    </string-array>
    <string-array name="highesteducationoptions">
        <item>@string/edustring1</item>
        <item>@string/edustring2</item>
        <item>@string/edustring3</item>
        <item>@string/edustring4</item>
        <item>@string/edustring5</item>
        <item>@string/edustring6</item>
        <item>@string/edustring7</item>
        <item>@string/edustring8</item>
    </string-array>
    <string-array name="streams">
        <item>@string/stream1</item>
        <item>@string/stream2</item>
        <item>@string/stream3</item>
        <item>@string/stream4</item>
        <item>@string/stream5</item>
        <item>@string/stream6</item>
        <item>@string/stream7</item>
        <item>@string/stream8</item>
        <item>@string/stream9</item>
        <item>@string/stream10</item>


    </string-array>
    <string-array name="jobstatuses">
        <item>@string/jobstat1</item>
        <item>@string/jobstat2</item>
        <item>@string/jobstat3</item>
        <item>@string/jobstat4</item>
        <item>@string/jobstat5</item>


    </string-array>
    <string-array name="slots">
        <item>@string/slot1</item>
        <item>@string/slot2</item>
    </string-array>
    <string name="stream1">Mechanical</string>
    <string name="stream2">	ComputerScience</string>
    <string name="stream3">Civil</string>
    <string name="stream4">Electronics and Communications</string>
    <string name="stream5">Electrical</string>
    <string name="stream6">Aerospace</string>
    <string name="stream7">Biotech</string>
    <string name="stream8">Finance Management</string>
    <string name="stream9">HR Management</string>
    <string name="stream10">Entrepreneurship Management</string>
    <string name="stream11">&lt;1 Lakh</string>
    <string name="stream13">&lt;1 Lakh</string>
    <string name="stream14">&lt;1 Lakh</string>
    <string name="stream15">&lt;1 Lakh</string>
    <string name="stream16">&lt;1 Lakh</string>
    <string name="stream17">&lt;1 Lakh</string>
    <string name="edustring1">Less Than High School</string>
    <string name="edustring2">High School</string>
    <string name="edustring3">Some College but No Degree</string>
    <string name="edustring4">Bachelor’s Degree</string>
    <string name="edustring5">Master’s Degree</string>
    <string name="edustring6">Doctoral Degree</string>
    <string name="edustring7">Professional Certification e.g. CA</string>
    <string name="edustring8">Other</string>
    <string name="mode1">Online</string>
    <string name="mode2">Classroom</string>
    <string name="jobstat1">Full-Time</string>
    <string name="jobstat2">Part-Time</string>
    <string name="jobstat3">Intern</string>
    <string name="jobstat4">Not Applicable</string>
    <string name="jobstat5">Other</string>
    <string name="slot1">1st Aug 9:00 PM</string>
    <string name="slot2">2nd Aug 2:00 PM</string>
    <string name="siblings_1">&lt;1 Lakh</string>
    <string name="siblings_2">1 Lakh - 5 Lakhs</string>
    <string name="siblings_3">&gt;5 Lakhs</string>
    <string name="app_name">T4U</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="tab_1">Search</string>
    <string name="tab_2">Home</string>
    <string name="tab_3">Profile</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="titleA">Search</string>
    <string name="titleC">Profile</string>
    <string name="titleB">Home</string>
    <string name="game2_instruction">Match color of text with actual color in specified time. This game will test mainly 2 skills: Memory Flexibility and Memory Attentiveness.</string>
    <string name="game3_instruction">Try to guess word that resembles 4 different pictures. This game will test mainly 2 skills: Verbal Ability and Memory Flexibility.</string>
    <string name="next">NEXT</string>
    <string name="flexibility_test">FLEXIBILITY GAME</string>
    <string name="skip">SKIP</string>
    <string name="game5_instruction">Select 3 important valued choices and state reason for your selection. This is just to understand you better. There is nothing wrong or right in your choice.</string>
    <string name="start">GOT IT</string>
    <string name="skip_title">Do you really want to skip?</string>
    <string name="skip_content">If you skip then we will not have enough data for complete analysis.</string>
    <string name="exit_title">Do you really want to exit?</string>
    <string name="exit_content">If you exit then we will not have enough data for complete analysis.</string>
    <string name="skip_button">Skip</string>
    <string name="rupee">\u20B9</string>
    <string name="resume">Resume</string>
    <string name="int1"><b>-Realistic (Doers): </b> People who like to work with <b>"things"</b>.They tend to be "assertive and competitive and are interested in activities requiring motor coordination, skill and strenght."</string>
    <string name="int2"><b>-Investigative (Thinkers):</b>People who prefer to work with<b>" data"</b>They like to "think and observe rather than act, to organize and understand information rather than to persuade."</string>
    <string name="int3"><b>-Artistic (Creators):</b> People who like to work with <b>"ideas and things."</b> They tend to be "creative, open, inventive, original, perceptive, sensitive, independent and emotional.“</string>
    <string name="int4"><b>-Social (Helpers):</b>People who like to work with <b>"people"</b> and who "seem to satisfy their needs in teaching or helping situations."</string>
    <string name="int5"><b>-Enterprising (Persuaders):</b> People who like to work with <b>"people and data."</b>They tend to be "good talkers, and use this skill to lead or persuade others.“</string>
    <string name="int6"><b>-Conventional (Organizers):</b>People who prefer to work with <b>"data"</b> and who "like rules and regulations and emphasize self-control...they like structure and order, and dislike unstructured or unclear work and interpersonal situations."</string>
    <string name="disclaimer_general"><b>Disclaimer: </b> The results are only indicative and has been generated based on data that has been provided and the company or any authorized representative of the company shall in no case be liable for failure in any course of study or activity recommended in the report. </string>
    <string name="disclaimer_career"><b>Disclaimer: </b> The results are only indicative and has been generated based on data that has been provided and the company or any authorized representative of the company shall in no case be liable for failure in any course of study or activity recommended in the report. We recommend you to launch your child’s career with us and get effective results with the help of 1:1 personal scientific guidance.</string>
    <string name="skills">e.g. I like to play cricket.</string>
    <string name="benefits1">7-Dimensional, Comprehensive Career Assessment Report with Development Plans.</string>
    <string name="benefits2">5 Best-Fit Career Recommendations.</string>
    <string name="benefits3">Customized College &amp; Course Recommendations for Shortlisted Careers.</string>
    <string name="benefits4">Career Path Planning and Domain Change Assistance. 1-month Free Query Support for all Career-Related Queries.

</string>
    <string name="quest12">Text: The quick brown fox jumps over the lazy dog. 
</string>
    <string name="game9_instruction">Use your brain to answer these specifically designed smart questions. This game will test mainly 2 skills: Spatial Intelligence and Smartness Quotient.</string>
    <string name="sample">Sample</string>
    <string name="quest1">Q1. I become quite defensive or start giving explanation when being criticized or being scolded for mistake.</string>
    <string name="quest2">Q2. I stay calm under pressure.[e.g. Exam Stress ] and can handle difficult situation effectively [e.g. fight with friends] </string>
    <string name="quest4">Q4. I recognize how my behavior affects others and do understand emotions or sentiments of other person.</string>
    <string name="quest5">Q5. I love company of my friends and relatives and eagerly wait for moment to get together.</string>
    <string name="quest6">Q6. Which of the following stands true about You?</string>
    <string name="quest7">Q7. I manage emotions like anxiety, stress, anger, and fear in pursuit of a goal (like completing assigned task).</string>
    <string name="seekbarques">How much % of time you contribute on an average with your family?</string>
    <string name="quest3">Q3. I utilizes criticism and other feedback for growth irrespective of position of person like parents or friends who has given feedback.
</string>
    <string name="quest8">Q8. I maintain a sense of humor and maintains a smile of accomplishment.
</string>
    <string name="quest9">Q9. I am always able to see things from the other person\'s viewpoint.
</string>
    <string name="quest10">Q9. I am always able to see things from the other person\'s viewpoint.</string>
    <string name="quest11">Q10. I am good team player and generally build solid relationships with those I work with</string>
    <string name="parental_intro_1">You need to answer few behavioral questions, upload your handwriting sample etc.</string>
    <string name="parental_time">This exercise would take just 4-5 mins.</string>
    <string name="secure">Any information shared would be kept strictly confidential.</string>
    <string name="order1_help">Once your order is confirmed, you will see a confirmation e-mail displaying a unique Order ID, listing of the item(s) you have ordered and the expected delivery time. You will also be notified when we dispatch the item(s) from our warehouse with the respective tracking details. </string>
    <string name="order2_help">No, you don’t, however if you register with us it helps to serve you better.Not only will you be able to rate and review products but also you can accumulate Reward Points and obtain discounts on future purchases. After all, shopping more for less is always fun</string>
    <string name="order3_help">We regret that there has been a delay in shipment of your order. While we strive to deliver your order in 3 days, it is very rare for delivery to be delayed and try our best this doesn\'t happen in future. </string>
    <string name="order4_help">We are sorry that your shipment is tempered, our Customer Support Executive will help you. </string>
    <string name="order5_help">We regret that there has been a delay in shipment of your order. While we strive to deliver your order in 3 days, it is very rare for delivery to be delayed and try our best this doesn\'t happen in future. </string>
    <string name="order6_help">Don’t worry! This is a completely normal situation. This just means that different parts of your order may have simply been shipped in different packages. Compare the products with invoice and if you have any item short you can create ticket below and our customer support executive will help you out. </string>
    <string name="order7_help">In case the package has not been connected the below text--- We dispatch most orders within 1-4 business days (i.e. excluding Sundays and public holidays). We are pleased to say, 95% of T4U orders are delivered within 5 business days from the date of order. If you are joining us for the Sale, dispatches may be a bit delayed due to increased volumes. We will target to dispatch all orders within 5 days of order date.
</string>
</resources>