<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_height="match_parent"
    android:layout_width="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android" >
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:padding="20dp"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/blue"
        android:textSize="30dp"
        android:layout_marginTop="50dp"
        android:text="PERSONAL SECTION"
        android:layout_gravity="center_horizontal"
        android:textStyle="bold"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="15dp"
        android:background="@drawable/rectangle"
        android:padding="20dp"
        >

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginRight="10dp"
            android:layout_gravity="center_vertical"
            android:src="@drawable/ic_quest"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/textSize"
            android:textColor="@color/blue"

            android:text="@string/parental_intro_1"/>

    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="15dp"
        android:padding="20dp"
        android:layout_gravity="center_vertical"
        android:background="@drawable/rectangle"
        >

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginRight="10dp"
            android:src="@drawable/ic_timer"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/textSize"
            android:textColor="@color/blue"
            android:text="@string/parental_time"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="15dp"
        android:padding="20dp"
        android:layout_gravity="center_vertical"
        android:background="@drawable/rectangle"
        >

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginRight="10dp"
            android:src="@drawable/ic_privacy"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/textSize"
            android:textColor="@color/blue"
            android:text="@string/secure"/>

    </LinearLayout>


    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/blue"
        android:layout_alignParentBottom="true"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <Button
            android:id="@+id/exit"
            android:layout_width="190dp"
            android:layout_height="50dp"
            android:layout_alignParentLeft="true"
            android:background="@drawable/ripple_effect"
            android:text="EXIT"
            android:textColor="@color/white"
            android:textSize="@dimen/textSize" />

        <Button
            android:id="@+id/start"
            android:layout_width="190dp"
            android:layout_height="50dp"
            android:background="@drawable/ripple_effect"
            android:layout_alignParentRight="true"
            android:text="START"
            android:textColor="@color/white"
            android:textSize="@dimen/textSize" />

    </RelativeLayout>
</RelativeLayout>