<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background"
    tools:context="com.wireout.HelpDesk.OrderPlacementsActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/tool"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="#ff0000"
            app:popupTheme="@style/AppTheme.PopupOverlay" >
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Help Desk"
                    android:id="@+id/tooltilte"
                    android:textSize="20dp"
                    android:layout_marginTop="18dp"
                    android:textColor="@color/white"
                    />

                <!--<ImageView-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_alignParentRight="true"-->
                <!--android:background="?attr/selectableItemBackground"-->
                <!--android:padding="13dp"-->
                <!--android:id="@+id/cart"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:src="@mipmap/ic_cart"/>-->
            </RelativeLayout>
        </android.support.v7.widget.Toolbar>


    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/darkwhite"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="15dp"
            android:background="@color/white"

            android:layout_marginRight="15dp"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="55dp"
                app:cardElevation="0dp"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:id="@+id/card1_orderplacement">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="235dp"
                        android:layout_height="wrap_content"
                        android:text="How will I know my oder has bee placed/my order is confirmed?"
                        android:textColor="@color/black"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="16dp"/>
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/img1_orderplacement"
                        android:src="@drawable/ic_action_plus"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="10dp"/>

                </RelativeLayout>

            </android.support.v7.widget.CardView>
            <View
                android:layout_width="match_parent"
                android:layout_below="@id/card1_orderplacement"
                android:layout_height="1dp"
                android:background="@color/darkwhite"
                android:layout_weight="1"
                />

            <com.github.aakira.expandablelayout.ExpandableRelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:padding="16dp"
                android:background="@color/white"
                android:layout_marginRight="16dp"
                android:id="@+id/expandableLayout_order1_help">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/order1_help"/>

            </com.github.aakira.expandablelayout.ExpandableRelativeLayout>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="55dp"
                app:cardElevation="0dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_below="@+id/card1_orderplacement"
                android:id="@+id/card2_orderplacement">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="235dp"
                        android:layout_height="wrap_content"
                        android:text="Do I have to register to browse toys at Tomorrow4You?"
                        android:textColor="@color/black"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="16dp"/>
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/img2_orderplacement"
                        android:src="@drawable/ic_action_plus"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="10dp"/>

                </RelativeLayout>

            </android.support.v7.widget.CardView>
            <View
                android:layout_width="match_parent"
                android:layout_below="@id/card2_orderplacement"
                android:layout_height="1dp"
                android:background="@color/darkwhite"
                android:layout_weight="1"
                />

            <com.github.aakira.expandablelayout.ExpandableRelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:id="@+id/expandableLayout_order2_help">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/order2_help"/>

            </com.github.aakira.expandablelayout.ExpandableRelativeLayout>



            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="55dp"
                app:cardElevation="0dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:id="@+id/card3_orderplacement">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="235dp"
                        android:layout_height="wrap_content"
                        android:text="What if the order is not delivered as per the promised date?"
                        android:textColor="@color/black"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="16dp"/>
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/img4_orderplacement"
                        android:src="@drawable/ic_action_plus"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="10dp"/>

                </RelativeLayout>

            </android.support.v7.widget.CardView>
            <View
                android:layout_width="match_parent"
                android:layout_below="@id/card3_orderplacement"
                android:layout_height="1dp"
                android:background="@color/darkwhite"
                android:layout_weight="1"
                />

            <com.github.aakira.expandablelayout.ExpandableRelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:padding="16dp"
                android:id="@+id/expandableLayout_order3_help">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/order3_help"/>

            </com.github.aakira.expandablelayout.ExpandableRelativeLayout>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="55dp"
                app:cardElevation="0dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:id="@+id/card4_orderplacement">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="235dp"
                        android:layout_height="wrap_content"
                        android:text="What if my package/prduct is tempered?"
                        android:textColor="@color/black"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="16dp"/>
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/img5_orderplacement"
                        android:src="@drawable/ic_action_plus"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="10dp"/>

                </RelativeLayout>

            </android.support.v7.widget.CardView>
            <View
                android:layout_width="match_parent"
                android:layout_below="@id/card4_orderplacement"
                android:layout_height="1dp"
                android:background="@color/darkwhite"
                android:layout_weight="1"
                />

            <com.github.aakira.expandablelayout.ExpandableRelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:padding="16dp"
                android:layout_marginRight="16dp"
                android:id="@+id/expandableLayout_order4_help">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/order4_help"/>

            </com.github.aakira.expandablelayout.ExpandableRelativeLayout>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="55dp"
                app:cardElevation="0dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:id="@+id/card5_orderplacement">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="235dp"
                        android:layout_height="wrap_content"
                        android:text="Why I have not received my product yet?"
                        android:textColor="@color/black"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="16dp"/>
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/img6_orderplacement"
                        android:src="@drawable/ic_action_plus"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="10dp"/>

                </RelativeLayout>

            </android.support.v7.widget.CardView>
            <View
                android:layout_width="match_parent"
                android:layout_below="@id/card5_orderplacement"
                android:layout_height="1dp"
                android:background="@color/darkwhite"
                android:layout_weight="1"
                />


            <com.github.aakira.expandablelayout.ExpandableRelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:padding="16dp"
                android:layout_marginRight="16dp"
                android:id="@+id/expandableLayout_order5_help">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/order5_help"/>

            </com.github.aakira.expandablelayout.ExpandableRelativeLayout>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="55dp"
                app:cardElevation="0dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:id="@+id/card6_orderplacement">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="235dp"
                        android:layout_height="wrap_content"
                        android:text="Why did I receive a partial/incomplete order?"
                        android:textColor="@color/black"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="16dp"/>
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/img7_orderplacement"
                        android:src="@drawable/ic_action_plus"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="10dp"/>

                </RelativeLayout>

            </android.support.v7.widget.CardView>
            <View
                android:layout_width="match_parent"
                android:layout_below="@id/card6_orderplacement"
                android:layout_height="1dp"
                android:background="@color/darkwhite"
                android:layout_weight="1"
                />

            <com.github.aakira.expandablelayout.ExpandableRelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:padding="16dp"
                android:id="@+id/expandableLayout_order6_help">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/order6_help"/>

            </com.github.aakira.expandablelayout.ExpandableRelativeLayout>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="55dp"
                app:cardElevation="0dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:id="@+id/card7_orderplacement">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="235dp"
                        android:layout_height="wrap_content"
                        android:text="When can I expect my order delivery?"
                        android:textColor="@color/black"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="16dp"/>
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/img8_orderplacement"
                        android:src="@drawable/ic_action_plus"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="10dp"/>

                </RelativeLayout>

            </android.support.v7.widget.CardView>
            <View
                android:layout_width="match_parent"
                android:layout_below="@id/card7_orderplacement"
                android:layout_height="1dp"
                android:background="@color/darkwhite"
                android:layout_weight="1"
                />

            <com.github.aakira.expandablelayout.ExpandableRelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:padding="16dp"
                android:id="@+id/expandableLayout_order7_help">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/order7_help"/>

            </com.github.aakira.expandablelayout.ExpandableRelativeLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>
